--- a/FinalUygulamaSinavi/app/src/main/res/layout/activity_musteri_giris.xml
+++ b/FinalUygulamaSinavi/app/src/main/res/layout/activity_musteri_giris.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:ems="10"
+        android:text=""
         android:hint="Şifre"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
