--- a/FinalUygulamaSinavi/app/src/main/res/layout/activity_musteri_urun_detay.xml
+++ b/FinalUygulamaSinavi/app/src/main/res/layout/activity_musteri_urun_detay.xml
@@ -65,13 +65,13 @@
             android:textSize="40px"
             android:textStyle="bold|italic" />
 
-        <EditText
-            android:id="@+id/editTextNumber3"
+        <TextView
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
+            android:text="TextView" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -94,14 +94,34 @@
             android:textSize="40px"
             android:textStyle="bold|italic" />
 
-        <EditText
-            android:id="@+id/editTextNumber4"
+        <TextView
+            android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
+            android:text="TextView" />
+
     </LinearLayout>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Satın Al"
+        android:onClick="satinAl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
