--- a/HastaneUygulamasi/app/src/main/res/layout/activity_doktor_sistem_girisi.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_doktor_sistem_girisi.xml
@@ -72,7 +72,7 @@
         android:elevation="10dp"
         android:ems="10"
         android:hint="Kullanıcı Adı"
-        android:text=""
+        android:text="semabasar"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
         android:elevation="10dp"
         android:ems="10"
         android:hint="Şifre"
-        android:text=""
+        android:text="123456"
         android:inputType="textPassword"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
